[package]
edition = "2021"
name = "doppler"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
env_logger = "0.10.0"
hex = "0.4.3"
log = "0.4.18"
pest = "2.6.0"
pest_derive = "2.6.0"
sha2 = "0.10.6"
conf_parser = "0.1.6"
docker-compose-types = "0.5.1"
serde_yaml = "0.9.23"
indexmap = "1.9.3"