[package]
edition = "2021"
name = "doppler"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
hex = "0.4.3"
rust-ini = "0.19"
log = "0.4.18"
pest = "2.6.0"
pest_derive = "2.6.0"
sha2 = "0.10.6"
conf_parser = "0.2.0"
docker-compose-types = "0.5.1"
serde_yaml = "0.9.23"
indexmap = "1.9.3"
rand = "0.8.5"
serde = "1.0"
serde_json = "1.0"
uuid = {version = "1.4.1", features = ["v4"] }
signal-hook = "0.3.17"
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"
clap = { version = "4.3.23", features = ["derive", "env"] }
