[package]
edition = "2021"
name = "doppler_core"
version = "0.1.0"

[dependencies]
doppler_parser = { path = "../doppler_parser"}
anyhow = "1.0.71"
reqwest = { version = "0.12",  features = ["json", "rustls-tls"] }
base64 = "0.22.0"
hex = "0.4.3"
rust-ini = "0.19"
log = "0.4.20"
pest = "2.6.0"
pest_derive = "2.6.0"
sha2 = "0.10.6"
conf_parser = "0.2.0"
docker-compose-types = "0.5.1"
serde_yaml = "0.9.23"
indexmap = "1.9.3"
rand = "0.8.5"
serde = "1.0"
serde_json = "1.0"
uuid = {version = "1.4.1", features = ["v4"] }
pollster = "0.3.0"
time = { version = "0.3.25", features = ["formatting"] }
# Dependencies for non-WASM targets
rusqlite = { version = "0.26", optional = true }
# Dependencies for WASM targets
gluesql = { version = "0.9.0", optional = true }
wasm-bindgen = { version = "0.2.92", optional = true }
wasm-bindgen-futures = {version = "0.4.42" , optional = true }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = "0.26"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gluesql = "0.9.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"